_sass/components/_sidebar.scss
.sidebar {
  &.affix {
    position: static;
  }

  @media (max-width: $screen-sm-max) {
    display: none;
  }

  @media (min-width: $screen-sm-min) {
    padding-left: 20px;
  }

  .nav {
    margin-top: $padding-large-vertical;
    margin-bottom: $padding-large-vertical;

    > li > a {
      display: block;
      padding: 4px 20px;
      font-size: 13px;
      color: lighten($babel-dark-gray, 35%);

      &:hover,
      &:focus {
        padding-left: 19px;
        color: $babel-dark-gray;
        text-decoration: none;
        background-color: transparent;
        border-left: 1px solid $babel-yellow;
      }
    }

    > .active > a,
    > .active:hover > a,
    > .active:focus > a {
      padding-left: 18px;
      color: $babel-dark-gray;
      background-color: transparent;
      border-left: 2px solid $babel-yellow;
    }

    .nav {
      display: none; /* Hide by default, but at >768px, show it */
      padding-bottom: 10px;

      > li > a {
        padding-top: 1px;
        padding-bottom: 1px;
        padding-left: 30px;
        font-size: $font-size-small;
        font-weight: normal;

        &:hover,
        &:focus {
          padding-left: 29px;
        }
      }

      > .active > a,
      > .active:hover > a,
      > .active:focus > a {
        padding-left: 28px;
      }
    }
  }

  /* Show and affix the side nav when space allows it */
  @media (min-width: $screen-md-min) {
    .nav > .active > ul,
    .nav > li:hover > ul {
      display: block;
    }

    /* Widen the fixed sidebar */
    &.affix,
    &.affix-bottom {
      width: 213px;
    }

    &.affix {
      position: fixed; /* Undo the static from mobile first approach */
      top: 70px;
    }

    &.affix-bottom {
      position: absolute; /* Undo the static from mobile first approach */
    }

    &.affix-bottom .nav,
    &.affix .nav {
      margin-top: 0;
      margin-bottom: 0;
    }
  }

  @media (min-width: $screen-lg-min) {
    /* Widen the fixed sidebar again */
    &.affix-bottom,
    &.affix {
      width: 263px;
    }
  }
}

